Removed some old classes and packages, many modifications towards a unified configuration file, work in progress w/ failing tests and compile-time errors.