@@ -41,7 +41,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang.StringUtils;
-import org.structr.common.Path;
 import org.structr.common.PathHelper;
 import org.structr.common.SecurityContext;
 import org.structr.core.Result;
@@ -54,7 +53,6 @@ import org.structr.core.graph.search.SearchAttribute;
 import org.structr.core.property.PropertyMap;
 import org.structr.util.Base64;
 import org.structr.web.entity.AbstractFile;
-import static org.structr.web.servlet.HtmlServlet.searchNodesAsSuperuser;
 
 //~--- classes ----------------------------------------------------------------
 
@@ -270,7 +268,9 @@ public class FileHelper {
 
 		fileNode.setRelativeFilePath(org.structr.web.entity.File.getDirectoryPath(uuid) + "/" + uuid);
 
-		java.io.File fileOnDisk = new java.io.File(Services.getInstance().getFilesPath() + "/" + fileNode.getRelativeFilePath());
+		final String filesPath = Services.getInstance().getConfigurationValue(Services.FILES_PATH);
+		
+		java.io.File fileOnDisk = new java.io.File(filesPath + "/" + fileNode.getRelativeFilePath());
 
 		fileOnDisk.getParentFile().mkdirs();
 		FileUtils.writeByteArrayToFile(fileOnDisk, data);
@@ -399,7 +399,7 @@ public class FileHelper {
 
 		if (relativeFilePath != null) {
 
-			String filePath         = Services.getInstance().getFilePath(Path.Files, relativeFilePath);
+			String filePath = getFilePath(relativeFilePath);
 
 			try {
 			
@@ -434,7 +434,7 @@ public class FileHelper {
 
 		if (path != null) {
 
-			String filePath         = Services.getInstance().getFilePath(Path.Files, path);
+			String filePath = getFilePath(path);
 
 			try {
 
@@ -506,23 +506,14 @@ public class FileHelper {
 
 		logger.log(Level.FINE, "Search for file with uuid: {0}", uuid);
 
-		List<SearchAttribute> searchAttrs = new LinkedList<>();
-
-		searchAttrs.add(Search.andExactUuid(uuid));
-		searchAttrs.add(Search.orExactTypeAndSubtypes(org.structr.web.entity.AbstractFile.class));
-
-		
 		try {
-			Result<AbstractFile> results = searchNodesAsSuperuser.execute(false, false, searchAttrs);
-			logger.log(Level.FINE, "{0} files found", results.size());
-			if (results.isEmpty()) return null;
-		
-			return (AbstractFile) results.get(0);
+			return StructrApp.getInstance().get(AbstractFile.class, uuid);
 			
-		} catch (FrameworkException ex) {
-			logger.log(Level.SEVERE, null, ex);
+		} catch (Throwable t) {
+			
+			logger.log(Level.WARNING, "Unable to load file by UUID {0}: {1}", new Object[] { uuid, t.getMessage() } );
 		}
-
+		
 		return null;
 	}
 		
@@ -530,23 +521,14 @@ public class FileHelper {
 
 		logger.log(Level.FINE, "Search for file with name: {0}", name);
 
-		List<SearchAttribute> searchAttrs = new LinkedList<>();
-
-		searchAttrs.add(Search.andExactName(name));
-		searchAttrs.add(Search.orExactTypeAndSubtypes(org.structr.web.entity.AbstractFile.class));
-
-		
 		try {
-			Result<AbstractFile> results = searchNodesAsSuperuser.execute(false, false, searchAttrs);
-			logger.log(Level.FINE, "{0} files found", results.size());
-			if (results.isEmpty()) return null;
-		
-			return (AbstractFile) results.get(0);
+			return StructrApp.getInstance().nodeQuery(AbstractFile.class).andName(name).getFirst();
 			
-		} catch (FrameworkException ex) {
-			logger.log(Level.SEVERE, null, ex);
+		} catch (Throwable t) {
+			
+			logger.log(Level.WARNING, "Unable to load file by name {0}: {1}", new Object[] { name, t.getMessage() } );
 		}
-
+		
 		return null;
 	}
 	
@@ -571,4 +553,21 @@ public class FileHelper {
 		return "/".concat(folderPath);
 	}
 	
+	public static String getFilePath(final String... pathParts) {
+
+		String filePath          = Services.getInstance().getConfigurationValue(Services.FILES_PATH);
+		StringBuilder returnPath = new StringBuilder();
+
+		returnPath.append(filePath);
+		returnPath.append(filePath.endsWith("/")
+			   ? ""
+			   : "/");
+
+		for (String pathPart : pathParts) {
+			returnPath.append(pathPart);
+		}
+
+		return returnPath.toString();
+	}
+
 }
